Sir Isaac Newton

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,109 @@
+### ~/.tmux.conf
+### ——— GENERAL SETTINGS ———
+
+# Set prefix key to Ctrl-d (instead of the default Ctrl-b)
 unbind C-b
-set -g prefix C-x
-bind C-x send-prefix
-set -g mode-keys emacs
-set -g status-keys emacs
-set -s escape-time 0
+set -g prefix C-d
+bind C-d send-prefix
+
+# Start window and pane numbering from 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Open new windows in the current pane's working directory
+bind c new-window -c "#{pane_current_path}"
+
+# Enable mouse support (click to select pane/window, scroll, etc.)
+set -g mouse off
+
+# Improve visual response time when switching panes/windows
+set -sg escape-time 0
+
+# Reload tmux configuration (prefix + r)
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+
+# Make pane borders thicker and more visible
+set -g pane-border-style fg=brightblack
+set -g pane-active-border-style fg=yellow
+
+### ——— PANE NAVIGATION (Prefix + Arrow keys) ———
+bind Left select-pane -L
+bind Right select-pane -R
+bind Up select-pane -U
+bind Down select-pane -D
+
+### ——— PANE RESIZING (Alt + Arrow keys) ———
+bind -n M-Left resize-pane -L 3
+bind -n M-Right resize-pane -R 3
+bind -n M-Up resize-pane -U 1
+bind -n M-Down resize-pane -D 1
+
+# Quickly split panes (prefix + | or -)
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# Automatically name windows but prevent renaming by commands
+set-option -g automatic-rename on
+set-option -g allow-rename off
+
+# Status bar appearance
+set -g status on
+set -g status-interval 5
+set -g status-justify centre
+
+# Status bar color theme
+set -g status-bg colour235
+set -g status-fg colour136
+set -g status-left-length 40
+set -g status-right-length 100
+
+# Status bar content
+set -g status-left "#[fg=green]#S #[fg=blue]|#[default]"
+set -g status-right "#[fg=cyan]%Y-%m-%d #[fg=yellow]%H:%M:%S#[default]"
+
+# Highlight active window
+setw -g window-status-current-format "#[fg=black,bg=yellow] #I:#W #[default]"
+setw -g window-status-format " #I:#W "
+
+# Increase scrollback history limit
+set -g history-limit 10000
+
+# Enable UTF-8 and 256-color support
+set -g default-terminal "screen-256color"
+
+# Use vi keybindings in copy mode
+setw -g mode-keys vi
+
+# Enable mouse-based selection in copy mode
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel
+
+# Prefix + y to copy selection to system clipboard (requires xclip or pbcopy)
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+
+### ——— VISUAL / USABILITY IMPROVEMENTS ———
+
+# Set terminal window title to match the tmux window name
+set -g set-titles on
+set -g set-titles-string '#T'
+
+# Automatically name the first window when creating a new session
+new-session -n shell
+
+# Use vi-style keybindings for command mode
+set -g status-keys vi
+
+# Use 12-hour clock format
+set -g clock-mode-style 12
+
+# Prefix + s to open the session chooser
+bind s choose-session
+
+# Prefix + w to open the window chooser
+bind w choose-window
+
+# Prefix + q to close the active pane
+bind q kill-pane
+
+# Prefix + R to rotate all panes in the current window
+bind R rotate-window
 
